Aleksandr's landing page

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,6 @@
-<!doctype html>
-<html class="no-js" lang="">
+ <html>
     <head>
-        <script src="//cdn.optimizely.com/js/2849630347.js"></script>
+         <script src="//cdn.optimizely.com/js/2849630347.js"></script>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Choose with Alice</title>
@@ -16,125 +15,133 @@
         <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="assets/css/alice.css">
+        <link rel="stylesheet" href="assets/css/alice_index.css">
     </head>
 
     <body class="bg-white landingpage">
 
-      <header class="p4 bg-cover bg-center white bg-gray center">
-        <div class="container">
-          <div class="clearfix">
-            <h1 class="center">Have an <strong>easy</strong> start in Finland</h1>
-            <p class="h2 center">Select and open your bank account before your arrival</p>
+             <header class="p4 bg-cover bg-center white bg-gray center">
+                <div class="container">
+                  <div class="clearfix">
+                    <h1 class="center">Have an <strong>easy</strong> start in Finland</h1>
+                    <p class="h2 center">Select and open your bank account before your arrival</p>
 
-            <a class="button button-big white center caps bg-blue" id="getstartednow" href="/list">Get Started Now</a> <br>
-          </div>
-        </div>
-      </header>
-
-      <main class="container">
-        <div class="clearfix">
-
-            <h2 class="mt3 center blue">Benefits of using Alice</h2>
-
-            <div class="col-8 mx-auto">
-                <ul class="list-reset">
-                    <li class="h3"><i class="fa fa-thumbs-up blue"></i> You choose the best offer for you.</li>
-                    <li class="h3"><i class="fa fa-thumbs-up blue"></i> You let us take care of all the paperwork.</li>
-                    <li class="h3"><i class="fa fa-thumbs-up blue"></i> You don't have to wait for an appointment at the bank.</li>
-                    <li class="h3"><i class="fa fa-thumbs-up blue"></i> You can pick up your account package immediately when you arrive.</li>
-                    <li class="h3"><i class="fa fa-thumbs-up blue"></i> You can use online banking from the first day.</li>
-                </ul>
-            </div>
-
-          <h2 class="center blue mt4">Welcome to Finland</h2>
-
-          <p class="px2">Congratulations for having been accepted to study in Finland! From our own experience we know that you're super excited to jump on that plane and fly to Helsinki, but there are a few things you should know. Due to Finnish systems and regulations, you have a high chance of running into issues with your current bank. Below you see an overview of these.</p>
-
-          <div class="clearfix">
-            <div class="col col-6">
-              <div class="m2 p2 bg-blue white border rounded">
-                <div class="center">
-                  <img class="option" src="assets/img/euros.jpg" class="mb2" />
-                  <h2 class="mt0">I have a European Euro account.</h2>
+                    <a class="button button-big white center caps bg-blue" id="getstartednow" href="/list">Get Started Now</a> <br>
+                  </div>
                 </div>
-                <p>In most cases, you will have little problems, however, when you want to do more than pay for your beers, you might run into problems.</p>
-                <ul class="list-reset">
-                  <li><i class="fa fa-minus-circle"></i> Some bank cards don't work </li>
-                  <li><i class="fa fa-minus-circle"></i> It might be difficult to receive salary</li>
-                  <li><i class="fa fa-minus-circle"></i> And more...</li>
-                </ul>
-              </div>
-            </div>
-            <div class="col col-6">
-              <div class="m2 p2 bg-blue white border rounded">
-                <div class="center">
-                  <img class="option" src="assets/img/currencies.jpg" class="mb2" />
-                  <h2 class="mt0">I have an other account.</h2>
+             </header>
+
+        <div class="what_do_we_offer">
+            <div class="what_do_we_offer_item">
+                <div class="what_do_we_offer_item_img">
+                    <div class="what_do_we_offer_item_img_cell">
+                        <img src="img/offer_1.png"/>
+                    </div>
                 </div>
-                <p>Using your current bank account in Finland will most likely cost you a lot of money make you feel miserable. You can expect problems like these:</p>
-                <ul class="list-reset">
-                  <li><i class="fa fa-minus-circle"></i> You will have transaction fees and limits</li>
-                  <li><i class="fa fa-minus-circle"></i> Many bank cards don't work</li>
-                  <li><i class="fa fa-minus-circle"></i> Receiving salary is not possible</li>
-                  <li><i class="fa fa-minus-circle"></i> And more...</li>
-                </ul>
-              </div>
+                <p class="what_do_we_offer_item_h">The best offer</p>
+                <p class="what_do_we_offer_item_d">Everyone has special need. With Alice it easy to compare and choose the best service according to your preferences.</p>
             </div>
-          </div>
+            <div class="what_do_we_offer_item">
+                <div class="what_do_we_offer_item_img">
+                    <div class="what_do_we_offer_item_img_cell">
+                        <img src="img/offer_2.gif"/>
+                    </div>
+                </div>
+                <p class="what_do_we_offer_item_h">No paperwork</p>
+                <p class="what_do_we_offer_item_d">We will take care of all paperwork.</p>
+            </div>
+            <div class="what_do_we_offer_item">
+                <div class="what_do_we_offer_item_img">
+                    <div class="what_do_we_offer_item_img_cell">
+                        <img src="img/offer_3.gif"/>
+                    </div>
+                </div>
+                <p class="what_do_we_offer_item_h">Save time</p>
+                <p class="what_do_we_offer_item_d">Some banks require an appoinment to serve you. With us you can book the time in bank you choose.</p>
+            </div>
+            <div class="what_do_we_offer_item">
+                <div class="what_do_we_offer_item_img">
+                    <div class="what_do_we_offer_item_img_cell">
+                        <img src="img/offer_4.gif"/>
+                    </div>
+                </div>
+                <p class="what_do_we_offer_item_h">Everything is ready</p>
+                <p class="what_do_we_offer_item_d">Pick your card after arrival.</p>
+            </div>
+            <div class="clear"></div>
+        </div>
 
-          <p class="center">In many cases it's a good idea to open a Finnish bank account. We help you to do that.</p>
+        <div class="process_intro">
+            <div class="process_intro_wrap">
+                <h2>How does it work?</h2>
+                <div class="process_intro_items">
+                    <div class="process_intro_item">
+                        <img src="img/process_1.png"/>
+                        <p class="process_intro_item_h">1. Choose bank</p>
+                    </div>
+                    <div class="process_intro_item">
+                        <img src="img/process_2.png"/>
+                        <p class="process_intro_item_h">2. Upload docs</p>
+                    </div>
+                    <div class="process_intro_item">
+                        <img src="img/process_3.png"/>
+                        <p class="process_intro_item_h">3. Get your card</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-          <h2 class="mt4 center blue">How Alice works</h2>
+        <div class="step1">
+            <div class="step1_wrap">
+                <div class="step1_left">
+                    <img src="img/step_1.jpg"/>
+                </div>
+                <div class="step1_right">
+                    <p class="step1_right_h">How do I choose with Alice?</p>
+                    <p class="step1_right_d">How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?</p>
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
 
-          <div class="m2 p2 bg-blue white border rounded">
-            <ol class="m0">
-              <li class="py1">
-                We give you an overview of the different offers from Finnish banks. <br>
-                <span class="silver italic">Everything in simple, understandable English.</span>
-              </li>
-              <li class="py1">
-                You can tell us what's important to you and we give you a good recommendation. <br>
-                <span class="silver italic">No secret deals with banks. You can click the link and verify the specifications yourself.</span>
-              </li>
-              <li class="py1">
-                You fill in your personal details and upload some required documents. <br>
-                <span class="silver italic">We use those only for opening your account. Everything is encrypted, no hacks, no NSA stuff.</span>
-              </li>
-              <li class="py1">
-                We take care of your application for a bank account. <br>
-                <span class="silver italic">Paperwork? Proving your student status? Phone calls with the bank? No, you don't have to do a thing. </span>
-              </li>
-              <li class="py1">
-                You choose where you want to pick up your account package. <br>
-                <span class="silver italic">We make sure everything is there before your arrival. You just have to show your passport and you're done! </span>
-              </li>
-              <li class="py1">
-                That's it! <br>
-                <span class="silver italic">Because you've arranged all this a few months before your arrival, the banks have had enough time to verify that you're not a criminal, so no need to wait for netbanking or other services. </span>
-              </li>
-            </ol>
-          </div>
+        <div class="step2">
+            <div class="step2_wrap">
+                <div class="step2_left">
+                    <p class="step1_right_h">How do I upload docs?</p>
+                    <p class="step1_right_d">How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?</p>
+                </div>
+                <div class="step2_right">
+                    <img src="img/step_2.jpg"/>
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
 
+        <div class="step1">
+            <div class="step1_wrap">
+                <div class="step1_left">
+                    <img src="img/step_3.jpg"/>
+                </div>
+                <div class="step1_right">
+                    <p class="step1_right_h">Final step</p>
+                    <p class="step1_right_d">How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?</p>
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
+        <div>
+                <h1 class="mt4 center blue">Be the first to open your account!</h1>
 
+                <p class="h2 center">We're currently in the process of creating a nice overview of the banks' offers for 2015-2016. Subscribe below and we'll let you know when we're ready!</p>
 
-          <h1 class="mt4 center blue">Be the first to open your account!</h1>
+              <form class="col-6 mx-auto mb4" id="form">
+                <input type="text" class="block full-width field-light" id="name" placeholder="Your Name"> <br>
+                <input type="text" class="block full-width field-light" id="email" placeholder="Email Address"> <br>
+                <button class="block full-width button bg-blue" id="submit">Put me on the list!</button>
+              </form>
 
-          <p class="h2 center">We're currently in the process of creating a nice overview of the banks' offers for 2015-2016. Subscribe below and we'll let you know when we're ready!</p>
-
-          <form class="col-6 mx-auto mb4" id="form">
-            <input type="text" class="block full-width field-light" id="name" placeholder="Your Name"> <br>
-            <input type="text" class="block full-width field-light" id="email" placeholder="Email Address"> <br>
-            <button class="block full-width button bg-blue" id="submit">Put me on the list!</button>
-          </form>
-
-          <p class="mt4 mb4 center gray">There's one last thing you should know, and that's that this is just a student project (for now). With this website we're trying to find out whether international students would use a service like this. By subscribing you indicate that you are okay with us contacting you with some follow-up questions. No spam, we promise.</p>
+              <p class="mt4 mb4 center gray">There's one last thing you should know, and that's that this is just a student project (for now). With this website we're trying to find out whether international students would use a service like this. By subscribing you indicate that you are okay with us contacting you with some follow-up questions. No spam, we promise.</p>
 
         </div>
-      </main>
-
-      <script src="assets/js/jquery.js"></script>
-      <script src="assets/js/firebase.js"></script>
-      <script src="assets/js/alice.js"></script>
-
     </body>
-</html>
+ </html>
