move images to right place

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             <div class="what_do_we_offer_item">
                 <div class="what_do_we_offer_item_img">
                     <div class="what_do_we_offer_item_img_cell">
-                        <img src="img/offer_1.png"/>
+                        <img src="assets/img/offer_1.png"/>
                     </div>
                 </div>
                 <p class="what_do_we_offer_item_h">The best offer</p>
@@ -44,7 +44,7 @@
             <div class="what_do_we_offer_item">
                 <div class="what_do_we_offer_item_img">
                     <div class="what_do_we_offer_item_img_cell">
-                        <img src="img/offer_2.gif"/>
+                        <img src="assets/img/offer_2.gif"/>
                     </div>
                 </div>
                 <p class="what_do_we_offer_item_h">No paperwork</p>
@@ -53,7 +53,7 @@
             <div class="what_do_we_offer_item">
                 <div class="what_do_we_offer_item_img">
                     <div class="what_do_we_offer_item_img_cell">
-                        <img src="img/offer_3.gif"/>
+                        <img src="assets/img/offer_3.gif"/>
                     </div>
                 </div>
                 <p class="what_do_we_offer_item_h">Save time</p>
@@ -62,7 +62,7 @@
             <div class="what_do_we_offer_item">
                 <div class="what_do_we_offer_item_img">
                     <div class="what_do_we_offer_item_img_cell">
-                        <img src="img/offer_4.gif"/>
+                        <img src="assets/img/offer_4.gif"/>
                     </div>
                 </div>
                 <p class="what_do_we_offer_item_h">Everything is ready</p>
@@ -76,15 +76,15 @@
                 <h2>How does it work?</h2>
                 <div class="process_intro_items">
                     <div class="process_intro_item">
-                        <img src="img/process_1.png"/>
+                        <img src="assets/img/process_1.png"/>
                         <p class="process_intro_item_h">1. Choose bank</p>
                     </div>
                     <div class="process_intro_item">
-                        <img src="img/process_2.png"/>
+                        <img src="assets/img/process_2.png"/>
                         <p class="process_intro_item_h">2. Upload docs</p>
                     </div>
                     <div class="process_intro_item">
-                        <img src="img/process_3.png"/>
+                        <img src="assets/img/process_3.png"/>
                         <p class="process_intro_item_h">3. Get your card</p>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
         <div class="step1">
             <div class="step1_wrap">
                 <div class="step1_left">
-                    <img src="img/step_1.jpg"/>
+                    <img src="assets/img/step_1.jpg"/>
                 </div>
                 <div class="step1_right">
                     <p class="step1_right_h">How do I choose with Alice?</p>
@@ -111,7 +111,7 @@
                     <p class="step1_right_d">How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?</p>
                 </div>
                 <div class="step2_right">
-                    <img src="img/step_2.jpg"/>
+                    <img src="assets/img/step_2.jpg"/>
                 </div>
                 <div class="clear"></div>
             </div>
@@ -120,7 +120,7 @@
         <div class="step1">
             <div class="step1_wrap">
                 <div class="step1_left">
-                    <img src="img/step_3.jpg"/>
+                    <img src="assets/img/step_3.jpg"/>
                 </div>
                 <div class="step1_right">
                     <p class="step1_right_h">Final step</p>
