--- a/public/index.html
+++ b/public/index.html
@@ -1,147 +1,154 @@
- <html>
-    <head>
-         <script src="//cdn.optimizely.com/js/2849630347.js"></script>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Choose with Alice</title>
-        <meta name="description" content="Starting your studies abroad in Finland should be easy. We help you with that.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<html>
 
-        <!-- Place favicon.ico in the root directory -->
+<head>
+  <script src="//cdn.optimizely.com/js/2849630347.js"></script>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Choose with Alice</title>
+  <meta name="description" content="Starting your studies abroad in Finland should be easy. We help you with that.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="assets/css/normalize.css">
-        <link rel="stylesheet" href="assets/css/basscss.css">
-        <link rel="stylesheet" href="assets/css/font-awesome.css">
-        <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="assets/css/alice.css">
-        <link rel="stylesheet" href="assets/css/alice_index.css">
-    </head>
+  <!-- Place favicon.ico in the root directory -->
 
-    <body class="bg-white landingpage">
+  <link rel="stylesheet" href="assets/css/normalize.css">
+  <link rel="stylesheet" href="assets/css/basscss.css">
+  <link rel="stylesheet" href="assets/css/font-awesome.css">
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="assets/css/alice.css">
+  <link rel="stylesheet" href="assets/css/alice_index.css">
+</head>
 
-             <header class="p4 bg-cover bg-center white bg-gray center">
-                <div class="container">
-                  <div class="clearfix">
-                    <h1 class="center">Have an <strong>easy</strong> start in Finland</h1>
-                    <p class="h2 center">Select and open your bank account before your arrival</p>
+<body class="bg-white landingpage">
 
-                    <a class="button button-big white center caps bg-blue" id="getstartednow" href="/list">Get Started Now</a> <br>
-                  </div>
-                </div>
-             </header>
+  <header class="p4 bg-cover bg-center white bg-gray center">
+    <div class="container">
+      <div class="clearfix">
+        <h1 class="center">Have an
+          <strong>easy</strong> start in Finland</h1>
+        <p class="h2 center">Select and open your bank account before your arrival</p>
 
-        <div class="what_do_we_offer">
-            <div class="what_do_we_offer_item">
-                <div class="what_do_we_offer_item_img">
-                    <div class="what_do_we_offer_item_img_cell">
-                        <img src="assets/img/offer_1.png"/>
-                    </div>
-                </div>
-                <p class="what_do_we_offer_item_h">The best offer</p>
-                <p class="what_do_we_offer_item_d">Everyone has special need. With Alice it easy to compare and choose the best service according to your preferences.</p>
-            </div>
-            <div class="what_do_we_offer_item">
-                <div class="what_do_we_offer_item_img">
-                    <div class="what_do_we_offer_item_img_cell">
-                        <img src="assets/img/offer_2.gif"/>
-                    </div>
-                </div>
-                <p class="what_do_we_offer_item_h">No paperwork</p>
-                <p class="what_do_we_offer_item_d">We will take care of all paperwork.</p>
-            </div>
-            <div class="what_do_we_offer_item">
-                <div class="what_do_we_offer_item_img">
-                    <div class="what_do_we_offer_item_img_cell">
-                        <img src="assets/img/offer_3.gif"/>
-                    </div>
-                </div>
-                <p class="what_do_we_offer_item_h">Save time</p>
-                <p class="what_do_we_offer_item_d">Some banks require an appoinment to serve you. With us you can book the time in bank you choose.</p>
-            </div>
-            <div class="what_do_we_offer_item">
-                <div class="what_do_we_offer_item_img">
-                    <div class="what_do_we_offer_item_img_cell">
-                        <img src="assets/img/offer_4.gif"/>
-                    </div>
-                </div>
-                <p class="what_do_we_offer_item_h">Everything is ready</p>
-                <p class="what_do_we_offer_item_d">Pick your card after arrival.</p>
-            </div>
-            <div class="clear"></div>
+        <a class="button button-big white center caps bg-blue" id="getstartednow" href="/app">Get Started Now</a>
+        <br>
+      </div>
+    </div>
+  </header>
+
+  <div class="what_do_we_offer">
+    <div class="what_do_we_offer_item">
+      <div class="what_do_we_offer_item_img">
+        <div class="what_do_we_offer_item_img_cell">
+          <img src="assets/img/offer_1.png" />
         </div>
-
-        <div class="process_intro">
-            <div class="process_intro_wrap">
-                <h2>How does it work?</h2>
-                <div class="process_intro_items">
-                    <div class="process_intro_item">
-                        <img src="assets/img/process_1.png"/>
-                        <p class="process_intro_item_h">1. Choose bank</p>
-                    </div>
-                    <div class="process_intro_item">
-                        <img src="assets/img/process_2.png"/>
-                        <p class="process_intro_item_h">2. Upload docs</p>
-                    </div>
-                    <div class="process_intro_item">
-                        <img src="assets/img/process_3.png"/>
-                        <p class="process_intro_item_h">3. Get your card</p>
-                    </div>
-                </div>
-            </div>
+      </div>
+      <p class="what_do_we_offer_item_h">The best offer</p>
+      <p class="what_do_we_offer_item_d">Everyone has special need. With Alice it easy to compare and choose the best service according to your preferences.</p>
+    </div>
+    <div class="what_do_we_offer_item">
+      <div class="what_do_we_offer_item_img">
+        <div class="what_do_we_offer_item_img_cell">
+          <img src="assets/img/offer_2.gif" />
         </div>
-
-        <div class="step1">
-            <div class="step1_wrap">
-                <div class="step1_left">
-                    <img src="assets/img/step_1.jpg"/>
-                </div>
-                <div class="step1_right">
-                    <p class="step1_right_h">How do I choose with Alice?</p>
-                    <p class="step1_right_d">How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?</p>
-                </div>
-                <div class="clear"></div>
-            </div>
+      </div>
+      <p class="what_do_we_offer_item_h">No paperwork</p>
+      <p class="what_do_we_offer_item_d">We will take care of all paperwork.</p>
+    </div>
+    <div class="what_do_we_offer_item">
+      <div class="what_do_we_offer_item_img">
+        <div class="what_do_we_offer_item_img_cell">
+          <img src="assets/img/offer_3.gif" />
         </div>
-
-        <div class="step2">
-            <div class="step2_wrap">
-                <div class="step2_left">
-                    <p class="step1_right_h">How do I upload docs?</p>
-                    <p class="step1_right_d">How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?</p>
-                </div>
-                <div class="step2_right">
-                    <img src="assets/img/step_2.jpg"/>
-                </div>
-                <div class="clear"></div>
-            </div>
+      </div>
+      <p class="what_do_we_offer_item_h">Save time</p>
+      <p class="what_do_we_offer_item_d">Some banks require an appoinment to serve you. With us you can book the time in bank you choose.</p>
+    </div>
+    <div class="what_do_we_offer_item">
+      <div class="what_do_we_offer_item_img">
+        <div class="what_do_we_offer_item_img_cell">
+          <img src="assets/img/offer_4.gif" />
         </div>
+      </div>
+      <p class="what_do_we_offer_item_h">Everything is ready</p>
+      <p class="what_do_we_offer_item_d">Pick your card after arrival.</p>
+    </div>
+    <div class="clear"></div>
+  </div>
 
-        <div class="step1">
-            <div class="step1_wrap">
-                <div class="step1_left">
-                    <img src="assets/img/step_3.jpg"/>
-                </div>
-                <div class="step1_right">
-                    <p class="step1_right_h">Final step</p>
-                    <p class="step1_right_d">How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?</p>
-                </div>
-                <div class="clear"></div>
-            </div>
+  <div class="process_intro">
+    <div class="process_intro_wrap">
+      <h2>How does it work?</h2>
+      <div class="process_intro_items">
+        <div class="process_intro_item">
+          <img src="assets/img/process_1.png" />
+          <p class="process_intro_item_h">1. Choose bank</p>
         </div>
-        <div>
-                <h1 class="mt4 center blue">Be the first to open your account!</h1>
-
-                <p class="h2 center">We're currently in the process of creating a nice overview of the banks' offers for 2015-2016. Subscribe below and we'll let you know when we're ready!</p>
-
-              <form class="col-6 mx-auto mb4" id="form">
-                <input type="text" class="block full-width field-light" id="name" placeholder="Your Name"> <br>
-                <input type="text" class="block full-width field-light" id="email" placeholder="Email Address"> <br>
-                <button class="block full-width button bg-blue" id="submit">Put me on the list!</button>
-              </form>
-
-              <p class="mt4 mb4 center gray">There's one last thing you should know, and that's that this is just a student project (for now). With this website we're trying to find out whether international students would use a service like this. By subscribing you indicate that you are okay with us contacting you with some follow-up questions. No spam, we promise.</p>
-
+        <div class="process_intro_item">
+          <img src="assets/img/process_2.png" />
+          <p class="process_intro_item_h">2. Upload docs</p>
         </div>
-    </body>
- </html>
+        <div class="process_intro_item">
+          <img src="assets/img/process_3.png" />
+          <p class="process_intro_item_h">3. Get your card</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="step1">
+    <div class="step1_wrap">
+      <div class="step1_left">
+        <img src="assets/img/step_1.jpg" />
+      </div>
+      <div class="step1_right">
+        <p class="step1_right_h">How do I choose with Alice?</p>
+        <p class="step1_right_d">How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?</p>
+      </div>
+      <div class="clear"></div>
+    </div>
+  </div>
+
+  <div class="step2">
+    <div class="step2_wrap">
+      <div class="step2_left">
+        <p class="step1_right_h">How do I upload docs?</p>
+        <p class="step1_right_d">How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?</p>
+      </div>
+      <div class="step2_right">
+        <img src="assets/img/step_2.jpg" />
+      </div>
+      <div class="clear"></div>
+    </div>
+  </div>
+
+  <div class="step1">
+    <div class="step1_wrap">
+      <div class="step1_left">
+        <img src="assets/img/step_3.jpg" />
+      </div>
+      <div class="step1_right">
+        <p class="step1_right_h">Final step</p>
+        <p class="step1_right_d">How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?</p>
+      </div>
+      <div class="clear"></div>
+    </div>
+  </div>
+  <div>
+    <h1 class="mt4 center blue">Be the first to open your account!</h1>
+
+    <p class="h2 center">We're currently in the process of creating a nice overview of the banks' offers for 2015-2016. Subscribe below and we'll let you know when we're ready!</p>
+
+    <form class="col-6 mx-auto mb4" id="form">
+      <input type="text" class="block full-width field-light" id="name" placeholder="Your Name">
+      <br>
+      <input type="text" class="block full-width field-light" id="email" placeholder="Email Address">
+      <br>
+      <button class="block full-width button bg-blue" id="submit">Put me on the list!</button>
+    </form>
+
+    <p class="mt4 mb4 center gray">There's one last thing you should know, and that's that this is just a student project (for now). With this website we're trying to find out whether international students would use a service like this. By subscribing you indicate that you are okay
+      with us contacting you with some follow-up questions. No spam, we promise.</p>
+
+  </div>
+</body>
+
+</html>
