landing page copy changes and remove register for more information form

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
       </div>
       <div class="step1_right">
         <p class="step1_right_h">How do I choose with Alice?</p>
-        <p class="step1_right_d">How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?</p>
+        <p class="step1_right_d">See a quick overview of the offerings of all the banks and select the most promising ones for detailed comparison.</p>
       </div>
       <div class="clear"></div>
     </div>
@@ -111,10 +111,10 @@
     <div class="step2_wrap">
       <div class="step2_left">
         <p class="step1_right_h">How do I upload docs?</p>
-        <p class="step1_right_d">How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?</p>
+        <p class="step1_right_d">Alice needs a copy of your passport, admission letter and some personal information to be able to start the opening process for you. You can provide all this information after registration.</p>
       </div>
-      <div class="step2_right">
-        <img src="assets/img/step_2.jpg" />
+      <div class="step2_right mb4">
+        <img src="assets/img/opening_process2.png" />
       </div>
       <div class="clear"></div>
     </div>
@@ -127,27 +127,10 @@
       </div>
       <div class="step1_right">
         <p class="step1_right_h">Final step</p>
-        <p class="step1_right_d">How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?How do I choose with Alice?</p>
+        <p class="step1_right_d">After the bank has confirmed it has all the information it needs, you just make an appointment with them through Alice and pickup your card right after your arrival. Profit.</p>
       </div>
       <div class="clear"></div>
     </div>
-  </div>
-  <div>
-    <h1 class="mt4 center blue">Be the first to open your account!</h1>
-
-    <p class="h2 center">We're currently in the process of creating a nice overview of the banks' offers for 2015-2016. Subscribe below and we'll let you know when we're ready!</p>
-
-    <form class="col-6 mx-auto mb4" id="form">
-      <input type="text" class="block full-width field-light" id="name" placeholder="Your Name">
-      <br>
-      <input type="text" class="block full-width field-light" id="email" placeholder="Email Address">
-      <br>
-      <button class="block full-width button bg-blue" id="submit">Put me on the list!</button>
-    </form>
-
-    <p class="mt4 mb4 center gray">There's one last thing you should know, and that's that this is just a student project (for now). With this website we're trying to find out whether international students would use a service like this. By subscribing you indicate that you are okay
-      with us contacting you with some follow-up questions. No spam, we promise.</p>
-
   </div>
 </body>
 
