add some tooltips to compare and list pages

--- a/public/assets/html/compare.html
+++ b/public/assets/html/compare.html
@@ -334,15 +334,15 @@
                 <p class="h4 bold mb0">Open Account</p>
               </td>
               <td class="border-right p2">
-                <a href="#/kyc" class="mb1 button block full-width center bg-olive">Open with Alice</a>
-                <a class="h6" href="#/"><i class="fa fa-chevron-right ml1 mr1"></i>Show details</a>
+                <a href="#/kyc" class="tooltips mb1 button block full-width center bg-olive">Open with Alice <span class="hide-tooltip">From here you would be able to start the opening process</span></a>
+                <a class="h6 block mt2" href="#/"><i class="fa fa-chevron-right ml1 mr1"></i>Show details</a>
               </td>
               <td class="border-right p2">
-                <a href="#/" class="mb1 button block full-width center">Download Forms</a>
-                <a class="h6" href="#/"><i class="fa fa-chevron-right ml1 mr1"></i>Show details</a>
+                <a href="#/" class="tooltips mb1 button block full-width center">Download Forms  <span class="hide-tooltip">Unfortunately Alice don't have contract with this bank to open account through Alice. You can still download all the required forms and fill them beforehand.</span></a>
+                <a class="h6 block mt2" href="#/"><i class="fa fa-chevron-right ml1 mr1"></i>Show details</a>
               </td>
               <td class="p2">
-                <button class="mb1 button block full-width center silver bg-gray" disabled>Not Available</button>
+                <button class="mb1 button block full-width center silver bg-gray" disabled>Not Available </button>
                 <a class="h6" href="#/"><i class="fa fa-chevron-right ml1 mr1"></i>Show details</a>
               </td>
             </tr>
