--- a/public/assets/html/list.html
+++ b/public/assets/html/list.html
@@ -127,7 +127,7 @@
               <br> Swedish
               <br> Russian
             </td>
-            <td> <a href="#/kyc" class="mb1 button block full-width center bg-olive">Open with Alice</a> </td>
+            <td> <a href="#/kyc" class="tooltips mb1 button block full-width center bg-olive">Open with Alice <span class="hide-tooltip">From here you would be able to start the opening process</span></a> </td>
           </tr>
 
           <tr>
@@ -147,7 +147,7 @@
             <td class="border-right"><i class="mr1 fa fa-check-circle-o olive"></i></td>
             <td class="border-right">English
               <br> Swedish</td>
-            <td> <a href="#/" class="mb1 button block full-width center">Download Forms</a> </td>
+            <td> <a href="#/" class="tooltips mb1 button block full-width center">Download Forms <span class="hide-tooltip">Unfortunately Alice don't have contract with this bank to open account through Alice. You can still download all the required forms and fill them beforehand.</span></a> </td>
           </tr>
 
           <tr>
@@ -269,7 +269,7 @@
         </div>
       </div>
 
-      <a href="#/compare" class="button button-outline white px3">Compare</a>
+      <a href="#/compare" title="" class="button button-outline white px3 tooltips">Compare<span>Click Compare to see the bank details view.</span></a>
 
     </div>
   </div>
